# d8-4

./: pyproject.toml  read.md
simple_signup/: db.sqlite3
simple_signup/sign/: models.py  urls.py
simple_signup/templates/: main.html
simple_signup/templates/sign/: login.html
simple_signup/work/: settings.py  urls.py
