[tool.poetry]
name = "d8-4"
version = "0.1.0"
description = ""
authors = ["Rasen Nikov <rasen800@gmail.com>"]
readme = "README.md"
packages = [{include = "d8_4"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.1"
django-allauth = "^0.60.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
